[package]
name = "cplex-rs-sys"
description = "FFI bindings to cplex"
links = "static=cplex"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]

[build-dependencies]
bindgen = "0.69"
glob = "0.3"
once_cell = "1.19"

[dev-dependencies]
libc = "0.2"
