[package]
name = "cplex-rs"
description = "Binding of IBM Cplex library"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
ffi = { package = "cplex-rs-sys", path = "../cplex-rs-sys", version = "0.1" }
thiserror = "1.0"
log = "0.4"
